--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -66,7 +66,6 @@ allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
 allow 107.189.5.249;
-allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
 allow 107.189.7.144;
@@ -198,6 +197,7 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
+allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
@@ -1025,7 +1025,6 @@ allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 allow 2605:6400:30:f503::1;
 allow 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
-allow 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 allow 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
@@ -1177,6 +1176,7 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
