--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -11,6 +11,7 @@ allow 103.20.241.102;
 allow 103.251.167.10;
 allow 103.253.24.18;
 allow 103.28.52.93;
+allow 103.91.65.44;
 allow 104.167.241.4;
 allow 104.167.242.117;
 allow 104.167.242.118;
@@ -75,6 +76,8 @@ allow 107.189.8.226;
 allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
+allow 108.181.69.137;
+allow 108.181.69.243;
 allow 108.59.12.41;
 allow 108.61.189.136;
 allow 109.104.153.22;
@@ -100,6 +103,7 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.35.245.150;
 allow 118.163.74.160;
+allow 121.78.28.166;
 allow 123.253.35.32;
 allow 124.198.131.108;
 allow 124.198.131.114;
@@ -111,6 +115,7 @@ allow 124.198.132.13;
 allow 124.198.132.172;
 allow 124.198.132.237;
 allow 124.198.132.52;
+allow 125.212.241.131;
 allow 125.253.56.119;
 allow 128.31.0.13;
 allow 130.193.10.21;
@@ -203,7 +208,6 @@ allow 176.65.149.105;
 allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
-allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -577,6 +581,7 @@ allow 194.53.137.102;
 allow 194.53.137.156;
 allow 194.55.167.14;
 allow 194.87.55.98;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -911,11 +916,8 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.28;
-allow 23.191.200.29;
-allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -1478,7 +1480,6 @@ allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
-allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
@@ -1509,6 +1510,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:223;
@@ -1718,7 +1720,6 @@ allow 45.9.156.22;
 allow 45.9.168.192;
 allow 45.94.31.68;
 allow 45.95.169.104;
-allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 46.165.243.36;
