--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -659,7 +659,6 @@ allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
-allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
@@ -690,6 +689,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:223;
