--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -11,6 +11,7 @@ set_real_ip_from 103.20.241.102;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.253.24.18;
 set_real_ip_from 103.28.52.93;
+set_real_ip_from 103.91.65.44;
 set_real_ip_from 104.167.241.4;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
@@ -75,6 +76,8 @@ set_real_ip_from 107.189.8.226;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
 set_real_ip_from 107.189.8.70;
+set_real_ip_from 108.181.69.137;
+set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.59.12.41;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
@@ -100,6 +103,7 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 114.35.245.150;
 set_real_ip_from 118.163.74.160;
+set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 124.198.131.108;
 set_real_ip_from 124.198.131.114;
@@ -111,6 +115,7 @@ set_real_ip_from 124.198.132.13;
 set_real_ip_from 124.198.132.172;
 set_real_ip_from 124.198.132.237;
 set_real_ip_from 124.198.132.52;
+set_real_ip_from 125.212.241.131;
 set_real_ip_from 125.253.56.119;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
@@ -203,7 +208,6 @@ set_real_ip_from 176.65.149.105;
 set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
-set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
@@ -577,6 +581,7 @@ set_real_ip_from 194.53.137.102;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.55.167.14;
 set_real_ip_from 194.87.55.98;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.246.231.197;
@@ -911,11 +916,8 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
-set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
@@ -1478,7 +1480,6 @@ set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
-set_real_ip_from 2a0e:bfc0:0:14::24a8;
 set_real_ip_from 2a0e:bfc0:0:2::8a62;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
@@ -1509,6 +1510,7 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
+set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
 set_real_ip_from 2a12:a800:11:1:124:198:131:223;
@@ -1718,7 +1720,6 @@ set_real_ip_from 45.9.156.22;
 set_real_ip_from 45.9.168.192;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.104;
-set_real_ip_from 45.95.169.109;
 set_real_ip_from 45.95.169.110;
 set_real_ip_from 45.95.169.252;
 set_real_ip_from 46.165.243.36;
