--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -276,7 +276,6 @@ allow 185.130.47.58;
 allow 185.132.53.107;
 allow 185.132.53.150;
 allow 185.138.88.25;
-allow 185.14.31.113;
 allow 185.150.28.13;
 allow 185.154.110.142;
 allow 185.154.110.17;
@@ -915,10 +914,13 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
+allow 23.191.200.29;
+allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.5;
+allow 23.191.200.4;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1480,6 +1482,7 @@ allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
+allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
@@ -1720,6 +1723,7 @@ allow 45.9.156.22;
 allow 45.9.168.192;
 allow 45.94.31.68;
 allow 45.95.169.104;
+allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 46.165.243.36;
