--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -276,7 +276,6 @@ deny 185.130.47.58;
 deny 185.132.53.107;
 deny 185.132.53.150;
 deny 185.138.88.25;
-deny 185.14.31.113;
 deny 185.150.28.13;
 deny 185.154.110.142;
 deny 185.154.110.17;
@@ -915,10 +914,13 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
+deny 23.191.200.27;
 deny 23.191.200.28;
+deny 23.191.200.29;
+deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
-deny 23.191.200.5;
+deny 23.191.200.4;
 deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
@@ -1480,6 +1482,7 @@ deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
+deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc7:0:3::2d83;
@@ -1720,6 +1723,7 @@ deny 45.9.156.22;
 deny 45.9.168.192;
 deny 45.94.31.68;
 deny 45.95.169.104;
+deny 45.95.169.109;
 deny 45.95.169.110;
 deny 45.95.169.252;
 deny 46.165.243.36;
