--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -659,6 +659,7 @@ set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
+set_real_ip_from 2a0e:bfc0:0:14::24a8;
 set_real_ip_from 2a0e:bfc0:0:2::8a62;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
