--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -208,6 +208,7 @@ allow 176.65.149.105;
 allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
+allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -921,6 +922,7 @@ allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1496,7 +1498,6 @@ allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5a46::1;
 allow 2a0f:85c1:356:5c50::1;
-allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1588,6 +1589,7 @@ allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
+allow 2a14:7583:f607::;
 allow 2a14:c380:280:6::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:d::d28b;
@@ -1632,6 +1634,7 @@ allow 38.97.116.243;
 allow 38.97.116.244;
 allow 38.97.116.245;
 allow 43.160.194.14;
+allow 44.30.4.69;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
@@ -1798,7 +1801,6 @@ allow 65.87.7.198;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
-allow 66.78.40.210;
 allow 66.78.40.225;
 allow 66.94.111.228;
 allow 67.219.109.141;
@@ -1899,7 +1901,6 @@ allow 93.123.109.116;
 allow 93.123.109.44;
 allow 93.123.12.112;
 allow 93.94.51.243;
-allow 93.94.52.229;
 allow 93.95.227.37;
 allow 93.95.228.105;
 allow 93.95.228.125;
