--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -208,6 +208,7 @@ deny 176.65.149.105;
 deny 176.65.149.87;
 deny 176.65.149.88;
 deny 176.65.149.96;
+deny 176.97.114.202;
 deny 177.93.140.66;
 deny 178.17.170.144;
 deny 178.17.170.23;
@@ -921,6 +922,7 @@ deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
+deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
@@ -1496,7 +1498,6 @@ deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5a46::1;
 deny 2a0f:85c1:356:5c50::1;
-deny 2a0f:85c1:356:62ed::1;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1588,6 +1589,7 @@ deny 2a12:a800:9:1:45:83:31:79;
 deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
 deny 2a14:1ec7:1000:a633::1;
+deny 2a14:7583:f607::;
 deny 2a14:c380:280:6::a;
 deny 2a14:c380:50:62::a;
 deny 2c0f:6c0:0:d::d28b;
@@ -1632,6 +1634,7 @@ deny 38.97.116.243;
 deny 38.97.116.244;
 deny 38.97.116.245;
 deny 43.160.194.14;
+deny 44.30.4.69;
 deny 45.11.59.28;
 deny 45.12.3.80;
 deny 45.128.133.242;
@@ -1798,7 +1801,6 @@ deny 65.87.7.198;
 deny 66.146.193.33;
 deny 66.220.242.222;
 deny 66.78.40.182;
-deny 66.78.40.210;
 deny 66.78.40.225;
 deny 66.94.111.228;
 deny 67.219.109.141;
@@ -1899,7 +1901,6 @@ deny 93.123.109.116;
 deny 93.123.109.44;
 deny 93.123.12.112;
 deny 93.94.51.243;
-deny 93.94.52.229;
 deny 93.95.227.37;
 deny 93.95.228.105;
 deny 93.95.228.125;
