--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -208,6 +208,7 @@ set_real_ip_from 176.65.149.105;
 set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
+set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
@@ -921,6 +922,7 @@ set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -1496,7 +1498,6 @@ set_real_ip_from 2a0f:85c1:356:231b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:5a46::1;
 set_real_ip_from 2a0f:85c1:356:5c50::1;
-set_real_ip_from 2a0f:85c1:356:62ed::1;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1588,6 +1589,7 @@ set_real_ip_from 2a12:a800:9:1:45:83:31:79;
 set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
+set_real_ip_from 2a14:7583:f607::;
 set_real_ip_from 2a14:c380:280:6::a;
 set_real_ip_from 2a14:c380:50:62::a;
 set_real_ip_from 2c0f:6c0:0:d::d28b;
@@ -1632,6 +1634,7 @@ set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 38.97.116.245;
 set_real_ip_from 43.160.194.14;
+set_real_ip_from 44.30.4.69;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
@@ -1798,7 +1801,6 @@ set_real_ip_from 65.87.7.198;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
-set_real_ip_from 66.78.40.210;
 set_real_ip_from 66.78.40.225;
 set_real_ip_from 66.94.111.228;
 set_real_ip_from 67.219.109.141;
@@ -1899,7 +1901,6 @@ set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.109.44;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.94.51.243;
-set_real_ip_from 93.94.52.229;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.105;
 set_real_ip_from 93.95.228.125;
