--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -404,7 +404,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -673,6 +672,7 @@ allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5a46::1;
 allow 2a0f:85c1:356:5c50::1;
+allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -764,7 +764,6 @@ allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
-allow 2a14:7583:f607::;
 allow 2a14:c380:280:6::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:d::d28b;
