--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -198,7 +198,6 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
-allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
@@ -208,7 +207,6 @@ allow 176.65.149.105;
 allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
-allow 176.97.114.202;
 allow 177.149.154.177;
 allow 177.93.140.66;
 allow 178.17.170.144;
@@ -247,7 +245,6 @@ allow 185.100.87.174;
 allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.41;
-allow 185.10.16.41;
 allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
@@ -918,12 +915,7 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
-allow 23.191.200.31;
-allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -1158,6 +1150,7 @@ allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:2:ee01::7583;
 allow 2800:ba0:6:c1::4858;
+allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
@@ -1177,7 +1170,6 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1499,7 +1491,6 @@ allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5a46::1;
 allow 2a0f:85c1:356:5c50::1;
-allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1801,7 +1792,6 @@ allow 65.87.7.198;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
-allow 66.78.40.210;
 allow 66.78.40.225;
 allow 66.94.111.228;
 allow 67.219.109.141;
