--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -107,6 +107,7 @@ allow 121.78.28.166;
 allow 123.253.35.32;
 allow 124.198.131.108;
 allow 124.198.131.114;
+allow 124.198.131.191;
 allow 124.198.131.223;
 allow 124.198.131.253;
 allow 124.198.131.29;
@@ -131,7 +132,6 @@ allow 143.20.64.235;
 allow 144.126.133.74;
 allow 144.172.73.31;
 allow 144.31.188.82;
-allow 146.103.43.17;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 148.113.152.91;
@@ -209,7 +209,6 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.149.154.177;
 allow 177.93.140.66;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -247,6 +246,7 @@ allow 185.100.87.174;
 allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -651,7 +651,6 @@ allow 2001:41d0:701:1000::5196;
 allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
-allow 2001:41d0:f00:5600::5ad6:7567;
 allow 2001:470:1:908::9001;
 allow 2001:470:1f06:2b4::2;
 allow 2001:4b20:12:f001::105;
@@ -898,6 +897,7 @@ allow 23.137.254.244;
 allow 23.137.255.85;
 allow 23.151.8.8;
 allow 23.155.8.104;
+allow 23.177.185.98;
 allow 23.184.48.78;
 allow 23.190.216.8;
 allow 23.191.200.10;
@@ -920,7 +920,6 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -1244,7 +1243,6 @@ allow 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
@@ -1264,6 +1262,7 @@ allow 2a06:1700:1:108::b829:eee2;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1441,6 +1440,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:e300:b:b::b;
+allow 2a0d:6c2:6:615::;
 allow 2a0d:bbc7::f816:3eff:fe0b:181b;
 allow 2a0d:bbc7::f816:3eff:fe0b:58d3;
 allow 2a0d:bbc7::f816:3eff:fe12:1851;
@@ -1521,6 +1521,7 @@ allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
+allow 2a12:a800:11:1:124:198:131:191;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
 allow 2a12:a800:11:1:124:198:131:29;
@@ -1594,7 +1595,6 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
-allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
@@ -1848,7 +1848,6 @@ allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.224.201;
@@ -1866,7 +1865,6 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
-allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
