--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -920,6 +920,7 @@ deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
+deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
@@ -948,6 +949,7 @@ deny 2.58.56.220;
 deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.93;
+deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
@@ -1243,6 +1245,7 @@ deny 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:b0c7:6388::1;
@@ -1595,6 +1598,7 @@ deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
+deny 2a14:c380:280:77::a;
 deny 2a14:c380:50:62::a;
 deny 2c0f:6c0:0:d::d28b;
 deny 31.129.22.65;
@@ -1848,6 +1852,7 @@ deny 82.221.131.86;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.211.224.201;
@@ -1865,6 +1870,7 @@ deny 87.118.122.30;
 deny 87.118.122.51;
 deny 87.120.222.33;
 deny 87.120.254.132;
+deny 87.121.79.55;
 deny 88.151.192.2;
 deny 88.80.20.86;
 deny 88.80.26.2;
