--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -920,6 +920,7 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -948,6 +949,7 @@ allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
+allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -1243,6 +1245,7 @@ allow 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
@@ -1595,6 +1598,7 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
+allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
@@ -1848,6 +1852,7 @@ allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.224.201;
@@ -1865,6 +1870,7 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
+allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
