--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -61,6 +61,7 @@ allow 2001:67c:e28:1::101;
 allow 2001:67c:e28:1::102;
 allow 2001:67c:e28:1::103;
 allow 2001:67c:e28:1::2;
+allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
 allow 2001:67c:e60:c0c:192:42:116:173;
 allow 2001:67c:e60:c0c:192:42:116:174;
@@ -177,6 +178,16 @@ allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
+allow 2605:6400:30:f174::;
+allow 2605:6400:30:f174:1:1:1:1;
+allow 2605:6400:30:f174:1111:2222:3333:4444;
+allow 2605:6400:30:f174:1:2:3:4;
+allow 2605:6400:30:f174::42;
+allow 2605:6400:30:f174:42:42::;
+allow 2605:6400:30:f174:42:42:42:0;
+allow 2605:6400:30:f174:42:42:42:42;
+allow 2605:6400:30:f174:4:3:2:1;
+allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 allow 2605:6400:30:f3d3:7c3:507c:6f32:c132;
@@ -360,7 +371,6 @@ allow 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
 allow 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
-allow 2a03:4000:28:1e8::69;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
@@ -394,6 +404,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -424,6 +435,7 @@ allow 2a06:1700:1:108::b829:eee2;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -755,5 +767,5 @@ allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
-allow 2a14:c380:50:62::a;
+allow 2a14:7583:f607::;
 allow 2c0f:6c0:0:d::d28b;
