Update lists at 20251013-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -206,6 +206,7 @@ allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
 allow 177.149.144.31;
+allow 177.93.140.66;
 allow 178.162.175.5;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -270,6 +271,8 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.129.62.64;
 allow 185.130.47.58;
+allow 185.132.53.107;
+allow 185.132.53.150;
 allow 185.138.88.25;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -780,7 +783,6 @@ allow 212.95.50.77;
 allow 213.111.150.96;
 allow 216.239.90.19;
 allow 216.73.159.101;
-allow 216.73.159.75;
 allow 216.9.224.232;
 allow 217.12.221.131;
 allow 217.182.75.199;
@@ -1227,7 +1229,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1591,6 +1592,7 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
+allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1747,7 +1749,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
