--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -116,7 +116,6 @@ allow 124.198.132.52;
 allow 125.212.241.131;
 allow 125.253.56.119;
 allow 128.31.0.13;
-allow 130.193.10.21;
 allow 130.193.15.186;
 allow 131.72.79.38;
 allow 136.244.111.163;
@@ -126,6 +125,7 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 143.20.64.235;
 allow 144.126.133.74;
+allow 144.172.73.31;
 allow 144.31.188.82;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -243,6 +243,7 @@ allow 185.100.87.174;
 allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -640,6 +641,7 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -756,7 +758,6 @@ allow 205.185.121.177;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 206.166.251.193;
-allow 208.84.101.46;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.34.15;
@@ -880,6 +881,7 @@ allow 23.129.64.223;
 allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
+allow 23.137.105.248;
 allow 23.137.248.100;
 allow 23.137.253.113;
 allow 23.137.253.254;
@@ -912,7 +914,6 @@ allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
@@ -952,7 +953,6 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1225,7 +1225,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1256,6 +1255,7 @@ allow 2a06:1700:1:108::b829:eee2;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1414,7 +1414,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:4d00:2:8::2;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
@@ -1465,6 +1464,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
+allow 2a0e:97c0:3e3:1bb::3;
 allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 allow 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 allow 2a0e:97c0:3e3:460:1337:b02b:1337:3;
@@ -1607,6 +1607,7 @@ allow 37.114.50.27;
 allow 37.114.63.5;
 allow 37.187.5.192;
 allow 37.221.208.71;
+allow 37.221.93.88;
 allow 37.228.129.128;
 allow 37.228.129.162;
 allow 37.228.129.168;
@@ -1616,7 +1617,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1746,7 +1746,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1779,7 +1778,6 @@ allow 5.45.98.162;
 allow 57.128.212.103;
 allow 57.128.220.107;
 allow 57.129.91.235;
-allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.133.60.208;
 allow 62.171.137.169;
