Update lists at 20251015-0001

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -100,7 +100,6 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.35.245.150;
 allow 118.163.74.160;
-allow 121.78.28.166;
 allow 123.253.35.32;
 allow 124.198.131.108;
 allow 124.198.131.114;
@@ -194,6 +193,7 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
+allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
@@ -891,7 +891,6 @@ allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.137.255.85;
 allow 23.151.8.8;
-allow 23.155.8.104;
 allow 23.177.185.98;
 allow 23.184.48.78;
 allow 23.190.216.8;
@@ -915,6 +914,7 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
@@ -948,7 +948,6 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
-allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
@@ -1171,6 +1170,7 @@ allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1463,7 +1463,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
-allow 2a0e:97c0:3e3:1bb::3;
 allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 allow 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 allow 2a0e:97c0:3e3:460:1337:b02b:1337:3;
@@ -1606,7 +1605,6 @@ allow 37.114.50.27;
 allow 37.114.63.5;
 allow 37.187.5.192;
 allow 37.221.208.71;
-allow 37.221.93.88;
 allow 37.228.129.128;
 allow 37.228.129.162;
 allow 37.228.129.168;
