--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -125,7 +125,6 @@ set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
@@ -347,6 +346,7 @@ set_real_ip_from 2a01:4f9:2b:75d::124:148;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -639,7 +639,6 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:29;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:38;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
-set_real_ip_from 2a0e:97c0:3e3:1bb::3;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
