Update lists at 20251015-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -17,7 +17,6 @@ allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.3.74;
 allow 104.219.236.100;
-allow 104.225.223.97;
 allow 104.244.72.115;
 allow 104.244.72.132;
 allow 104.244.73.136;
@@ -246,6 +245,7 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.40;
 allow 185.106.102.102;
 allow 185.107.57.64;
@@ -254,6 +254,7 @@ allow 185.107.57.66;
 allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
+allow 185.116.236.161;
 allow 185.120.16.171;
 allow 185.120.16.176;
 allow 185.126.114.110;
@@ -472,6 +473,7 @@ allow 185.247.184.105;
 allow 185.247.226.95;
 allow 185.252.232.218;
 allow 185.254.196.141;
+allow 185.32.126.43;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.40.4.100;
@@ -971,7 +973,6 @@ allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
-allow 2602:ff16:1:12a8::1;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:a00:101:4:216:3eff:fe2f:1c84;
 allow 2604:a00:101:4:216:3eff:fe2f:20c3;
@@ -1045,7 +1046,6 @@ allow 2605:a140:2262:7686::1;
 allow 2605:a141:2261:4410::1;
 allow 2605:a142:2263:1906::1;
 allow 2605:aa80:0:9::3;
-allow 2605:e440:3::3ef;
 allow 2607:5300:201:3100::35c5;
 allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::4894;
@@ -1170,6 +1170,7 @@ allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
+allow 2a00:c1e1:0:1::ca92:b254;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4f9:2b:75d::124:148;
@@ -1231,7 +1232,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1262,6 +1262,7 @@ allow 2a06:1700:1:108::b829:eee2;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
@@ -1419,6 +1420,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:4d00:2:8::2;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
@@ -1592,7 +1594,6 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
-allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:11::5e3d;
 allow 2c0f:6c0:0:d::d28b;
@@ -1753,7 +1754,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1867,7 +1867,6 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
-allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
@@ -1884,7 +1883,6 @@ allow 89.234.157.254;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
-allow 91.149.243.111;
 allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.203.145.116;
