--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 102.211.56.20;
 set_real_ip_from 102.211.56.200;
 set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.146.203.11;
+set_real_ip_from 103.164.54.199;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.20.241.102;
@@ -127,7 +128,6 @@ set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 143.20.64.235;
 set_real_ip_from 144.126.133.74;
-set_real_ip_from 144.172.73.31;
 set_real_ip_from 144.31.188.82;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
@@ -141,6 +141,7 @@ set_real_ip_from 152.32.206.127;
 set_real_ip_from 152.53.106.19;
 set_real_ip_from 152.53.184.161;
 set_real_ip_from 152.53.210.165;
+set_real_ip_from 152.53.48.80;
 set_real_ip_from 152.53.53.243;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
@@ -254,7 +255,6 @@ set_real_ip_from 185.107.57.66;
 set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
-set_real_ip_from 185.116.236.161;
 set_real_ip_from 185.120.16.171;
 set_real_ip_from 185.120.16.176;
 set_real_ip_from 185.126.114.110;
@@ -605,7 +605,7 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
 set_real_ip_from 196.251.69.116;
-set_real_ip_from 198.167.206.245;
+set_real_ip_from 198.167.206.205;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -646,7 +646,6 @@ set_real_ip_from 2001:41d0:601:1100::6f85;
 set_real_ip_from 2001:41d0:601:1100::71bb;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1000::5196;
-set_real_ip_from 2001:41d0:720:e300:25::;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
@@ -776,7 +775,6 @@ set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.58.254;
-set_real_ip_from 209.200.246.244;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.38.189.186;
 set_real_ip_from 212.69.167.80;
@@ -939,6 +937,7 @@ set_real_ip_from 2400:d320:2261:6860::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
+set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
 set_real_ip_from 24.240.72.170;
@@ -1049,7 +1048,6 @@ set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::35c5;
 set_real_ip_from 2607:5300:203:b45b::;
 set_real_ip_from 2607:5300:205:200::4894;
-set_real_ip_from 2607:5300:210:2900::588:ab9d;
 set_real_ip_from 2607:f530:9002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 set_real_ip_from 2610:150:4001:a120:216:3cff:fe4a:e2a9;
@@ -1278,6 +1276,7 @@ set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
+set_real_ip_from 2a0a:4cc0:80:1270::;
 set_real_ip_from 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
@@ -1485,10 +1484,6 @@ set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
-set_real_ip_from 2a0e:bfc0:0:11::796d;
-set_real_ip_from 2a0e:bfc0:0:14::24a8;
-set_real_ip_from 2a0e:bfc0:0:2::8a62;
-set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
 set_real_ip_from 2a0e:bfc7::216:3cff:fe6f:c4ca;
 set_real_ip_from 2a0e:bfc7::216:3cff:fe98:45cb;
@@ -1730,10 +1725,6 @@ set_real_ip_from 45.9.156.161;
 set_real_ip_from 45.9.156.22;
 set_real_ip_from 45.9.168.192;
 set_real_ip_from 45.94.31.68;
-set_real_ip_from 45.95.169.104;
-set_real_ip_from 45.95.169.109;
-set_real_ip_from 45.95.169.110;
-set_real_ip_from 45.95.169.252;
 set_real_ip_from 46.165.193.216;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.232.251.191;
