--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 102.211.56.20;
 allow 102.211.56.200;
 allow 103.109.101.105;
 allow 103.146.203.11;
+allow 103.164.54.199;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.20.241.102;
@@ -127,7 +128,6 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 143.20.64.235;
 allow 144.126.133.74;
-allow 144.172.73.31;
 allow 144.31.188.82;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -141,6 +141,7 @@ allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.184.161;
 allow 152.53.210.165;
+allow 152.53.48.80;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
@@ -254,7 +255,6 @@ allow 185.107.57.66;
 allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
-allow 185.116.236.161;
 allow 185.120.16.171;
 allow 185.120.16.176;
 allow 185.126.114.110;
@@ -605,7 +605,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.69.116;
-allow 198.167.206.245;
+allow 198.167.206.205;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -646,7 +646,6 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
-allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -776,7 +775,6 @@ allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.55.26;
 allow 209.141.58.254;
-allow 209.200.246.244;
 allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
@@ -939,6 +937,7 @@ allow 2400:d320:2261:6860::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
 allow 24.240.72.170;
@@ -1049,7 +1048,6 @@ allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::35c5;
 allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::4894;
-allow 2607:5300:210:2900::588:ab9d;
 allow 2607:f530:9002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2610:150:4001:a120:216:3cff:fe4a:e2a9;
@@ -1278,6 +1276,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
+allow 2a0a:4cc0:80:1270::;
 allow 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
@@ -1485,10 +1484,6 @@ allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:b107:dd0::3:fa35:9316;
-allow 2a0e:bfc0:0:11::796d;
-allow 2a0e:bfc0:0:14::24a8;
-allow 2a0e:bfc0:0:2::8a62;
-allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7::216:3cff:fe6f:c4ca;
 allow 2a0e:bfc7::216:3cff:fe98:45cb;
@@ -1730,10 +1725,6 @@ allow 45.9.156.161;
 allow 45.9.156.22;
 allow 45.9.168.192;
 allow 45.94.31.68;
-allow 45.95.169.104;
-allow 45.95.169.109;
-allow 45.95.169.110;
-allow 45.95.169.252;
 allow 46.165.193.216;
 allow 46.165.243.36;
 allow 46.232.251.191;
